<resources>
    <string name="app_name">PEX</string>
    <string name="title_home">Home</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_order_history">History</string>
    <string name="title_account">Account</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_receipt_download">Download Resi</string>
    <string name="title_receipt_share">Bagikan Resi</string>
    <string name="onboarding_title">Selamat Datang di Pexpress</string>
    <string name="onboarding_title2">Pick Up Gratis</string>
    <string name="onboarding_title3">Simpan Alamat Favorit</string>
    <string name="onboarding_title4">Metode Pembayaran Beragam</string>
    <string name="onboarding_description">Kirim paket <i>Sameday</i>, <i>Nextday</i>, dan <i>Reguler</i> lebih mudah hanya dalam satu aplikasi.</string>
    <string name="onboarding_description2">Kamu hanya perlu duduk santai karena Warrior Pexpress selalu siap <i>pick up</i> paket secara gratis dan tanpa minimum <i>order</i>.</string>
    <string name="onboarding_description3">Tidak perlu repot untuk <i>input</i> alamat secara berulang, cukup simpan beberapa alamat favorit kamu untuk menentukan titik <i>pick up</i> dan tujuan pengiriman paket.</string>
    <string name="onboarding_description4">Metode pembayaran <i>cash</i> maupun <i>cashless</i> dapat dipilih sesuai kebutuhanmu. Transaksi menjadi semakin aman, nyaman, dan mudah.</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="next">Selanjutnya</string>
    <string name="skip">Lewatkan</string>
    <string name="get_started">Mulai</string>
    <string name="number_handphone">Nomor Handphone</string>
    <string name="in_number_handphone">Masukkan Nomor Handphone</string>
    <string name="login">Login</string>
    <string name="dummy_login_pengguna_baru">Pengguna baru?</string>
    <string name="login_buat_akun_baru">Buat akun baru</string>
    <string name="send_code">Kirim Kode</string>
    <string name="dummy_send_code_tv">Verifikasi OTP</string>
    <string name="dummy_send_code_tv2">Kode verifikasi akan dikirimkan ke whatsapp kamu</string>
    <string name="dummy_otp_tv">Belum menerima kode keamanan?</string>
    <string name="otp_retry_send_code">kirim ulang kode tersebut</string>
    <string name="otp_verification">Verifikasi</string>
    <string name="placeholder_08_send_code">08</string>
    <string name="hint_send_code">12345678910</string>
    <string name="dummy_input_nohp_send_code">Masukkan Nomor Handphone</string>
    <string name="otp_desc">Masukkan kode yang kami kirimkan ke nomor %s di whatsapp anda</string>
    <string name="empty_history_order">Oops, nggak ada transaksi yang sesuai dengan status ini</string>
    <string name="empty_history_pembayaran">Oops, kamu belum pernah melakukan transaksi</string>
    <string name="profile_personal_data">Personal Data</string>
    <string name="profile_ganti_password">Ganti Password</string>
    <string name="profile_change_password">Ganti Password</string>
    <string name="profile_order_history">Riwayat Order</string>
    <string name="profile_settings">Pengaturan</string>
    <string name="profile_faq">FAQs</string>
    <string name="profile_log_out">Log Out</string>
    <string name="placeholder_det_profile_fullname">Nama Anda</string>
    <string name="placeholder_det_profile_email">Email</string>
    <string name="placeholder_det_profile_birth_date">Tanggal Lahir</string>
    <string name="placeholder_det_profile_gender">Jenis Kelamin</string>
    <string name="placeholder_male">Laki-laki</string>
    <string name="placeholder_female">Perempuan</string>
    <string name="placeholder_det_profile_number_phone">Nomor Handphone</string>
    <string name="placeholder_det_profile_province">Provinsi</string>
    <string name="placeholder_det_profile_regency">Kabupaten/Kota</string>
    <string name="placeholder_det_profile_address">Alamat</string>
    <string name="placeholder_change_password_old">Password Lama</string>
    <string name="placeholder_change_password_title">Masukkan nomor telepon</string>
    <string name="placeholder_change_password_desc">Kami akan mengirimi kode verifikasi ke nomor whatsapp anda.</string>
    <string name="origin">Asal</string>
    <string name="to">Tujuan</string>
    <string name="weight">Berat</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="tall">Tinggi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="problem_message">Sepertinya ada masalah coba beberapa saat lagi</string>
    <string name="problem_title">Ada Masalah</string>
    <string name="failed_title">Gagal</string>
    <string name="failed_description">Kesalahan Sistem Coba Lagi</string>
    <string name="district_fail_title">Kesalahan</string>
    <string name="district_fail_desc">Kecamatan Belum Terdaftar di Cabang</string>
    <string name="pembayaran_message">Kode %s pesanan telah berhasil dibuat, silahkan lakukan pembayaran transfer ke no rekening virtual Account berikut ini :</string>
    <string name="pembayaran_done">Saya Sudah Bayar</string>
    <string name="pembayaran_no_va">No Virtual Account</string>
    <string name="pembayaran_e_wallet">Nama E-Wallet</string>
    <string name="pembayaran_salin">Salin</string>
    <string name="pembayaran_title">Hallo Sahabat PEXPRESS..</string>
    <string name="pembayaran_title2">Sudah Menyelesaikan Transaksi?</string>
    <string name="pembayaran_placeholder_desc_payout3">Kami akan memproses transaksi anda setelah pembayaran berhasil dikonfirmasi</string>
    <string name="pembayaran_placeholder_copy_text">Nominal pembayaran telah disalin</string>
    <string name="pembayaran_placeholder_copy_text2">Nomor Va telah disalin</string>
    <string name="pembayaran_placeholder_desc3">Selesaikan pembayaran dalam 15 menit sebelum</string>
    <string name="pembayaran_nominal">Nominal Pembayaran</string>
    <string name="pembayaran_cash_desc">Kode %s pesanan telah berhasil dibuat, silahkan lanjutkan transaksi dengan menekan tombol konfirmasi</string>
    <string name="pembayaran_cash_desc2">Kami akan memproses transaksi anda setelah menekan tombol konfirmasi dibawah</string>
    <string name="pembayaran_cash_button">Konfirmasi</string>
    <string name="pembayaran_e_wallet_desc">Kode %s pesanan telah berhasil dibuat, silahkan masukkan nomor e-wallet terkait untuk melanjutkan transaksi</string>
    <string name="pembayaran_placeholder_e_wallet">No. Handphone</string>
    <string name="picklocation_placeholder_failed_get_cabang">Maaf untuk sementara daerah kecamatan anda belum diaktifkan dari cabang!</string>
    <string name="picklocation_placeholder_failed_get_cabang2">Maaf untuk sementara kecamatan anda belum terdaftar di cabang!</string>
    <string name="code_rupiah">Rp. %s</string>
    <string name="wib_format">%s WIB</string>
    <string name="datetime_format">%s WIB</string>
    <string name="complete_order_sukses">Order Sukses</string>
    <string name="complete_order_failed">Anda Belum Bayar</string>
    <string name="message_order_success">Paket anda akan dijemput ke alamat anda, terimakasih telah order</string>
    <string name="message_order_failed">Sistem mendeteksi anda belum melakukan pembayaran, Silahkan lakukan pembayaran terlebih dahulu!</string>
    <string name="checkout_asal_pengirim">Asal</string>
    <string name="checkout_info_pengirim">Info Pengirim</string>
    <string name="checkout_dropdown">Dropdown</string>
    <string name="checkout_nama_pengirim">Nama</string>
    <string name="checkout_nomor_handphone_pengirim">Nomor Handphone</string>
    <string name="checkout_patokan_alamat">Patokan Alamat</string>
    <string name="checkout_catatan">Catatan</string>
    <string name="checkout_info_penerima">Info Penerima</string>
    <string name="checkout_tujuan_penerima">Tujuan</string>
    <string name="checkout_nama_penerima">Nama</string>
    <string name="checkout_nomor_handphone_penerima">Nomor Handphone</string>
    <string name="checkout_info_pickup">Info Pickup</string>
    <string name="checkout_jarak">Jarak</string>
    <string name="checkout_jenis_layanan_pickup">Jenis Layanan</string>
    <string name="checkout_ukuran_barang_pickup">Ukuran Barang</string>
    <string name="checkout_jenis_barang_pickup">Jenis Barang</string>
    <string name="checkout_lainnya_pickup">Lainnya</string>
    <string name="checkout_jenis_barang_lainnya_pickup">Jenis Barang Lainnya</string>
    <string name="checkout_button">Checkout</string>
    <string name="checkout_tanggal_pickup">Tanggal Pickup</string>
    <string name="dimension_all_size">Panjang: %s %s\nLebar: %s %s\nTinggi: %s %s</string>
    <string name="dimension_weight_size">%s (%s)</string>
    <string name="dimension_weight_size_2">%s Kg</string>
    <string name="checkout_toolbar">Checkout</string>
    <string name="checkout_metode_pembayaran">Metode Pembayaran</string>
    <string name="checkout_tunai">Tunai</string>
    <string name="checkout_transfer">Transfer Bank</string>
    <string name="checkout_e_wallet">E-Wallet</string>
    <string name="checkout_qris">QRIS</string>
    <string name="checkout_jumlah_pembayaran">Jumlah Pembayaran</string>
    <string name="checkout_asuransi_pengiriman_description">Untuk perlindungan terhadap resiko kerusakan atau kehilangan barang hingga senilai Rp. 5,000,000 (lima juta rupiah) S&amp;K berlaku.</string>
    <string name="checkout_asuransi_pengiriman_sandk">Lihat S&amp;K</string>
    <string name="checkout_asuransi_pengiriman">Asuransi Pengiriman</string>
    <string name="checkout_biaya_asuransi">Proteksikan Paket Kamu</string>
    <string name="checkout_total_pembayaran">Total Pembayaran</string>
    <string name="order_checkout">Checkout</string>
    <string name="order_subtotal">Subtotal</string>
    <string name="checkout_bayar_sekarang">Bayar Sekarang</string>
    <string name="kilometer_jarak">%s Km</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_history_1">Proses</string>
    <string name="tab_history_2">Terkirim</string>
    <string name="tab_history_3">Kembali</string>
    <string name="history_lihat_detail">Lihat Detail</string>
    <string name="history_lihat_resi">Lihat Resi</string>
    <string name="history_tanggal_pickup">Tanggal Pickup</string>
    <string name="history_informasi_pengiriman">Informasi Pengiriman</string>
    <string name="history_pengirim">Pengirim</string>
    <string name="history_asal_pengirim">Asal</string>
    <string name="history_telpon_pengirim">Telpon</string>
    <string name="history_rincinan_pembayaran">Rincian Pembayaran</string>
    <string name="history_metode_pembayaran">Metode Pembayaran</string>
    <string name="history_berat">Berat</string>
    <string name="history_penerima">Penerima</string>
    <string name="history_tujuan_penerima">Tujuan</string>
    <string name="history_jenis_layanan">Jenis Layanan</string>
    <string name="history_jenis_barang">Jenis Barang</string>
    <string name="history_ukuran_barang">Ukuran Barang</string>
    <string name="history_asuransi">Asuransi</string>
    <string name="history_tarif">Tarif</string>
    <string name="empty_milestone">Milestone Tidak Ditemukan</string>
    <string name="milestone_lihat_foto_penerima">Lihat Foto Penerima</string>
    <string name="cek_ongkir_asal">Asal</string>
    <string name="cek_ongkir_tujuan">Tujuan</string>
    <string name="cek_ongkir_jenis_layanan">Jenis Layanan</string>
    <string name="cek_ongkir_ukuran_barang">Ukuran Barang</string>
    <string name="tarif_btn_cek_ongkir_sekarang">Cek Ongkir Sekarang</string>
</resources>