<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.auth.register.RegisterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_32">

            <ImageView
                android:id="@+id/otp_ic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/img_send_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dummy_otp_tv"
                style="@style/PrimaryTextStyle.SemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/dummy_send_code_tv"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otp_ic" />

            <TextView
                android:id="@+id/dummy_otp_tv2"
                style="@style/SecondaryTextStyle.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_send_code_tv2"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dummy_otp_tv" />

            <TextView
                android:id="@+id/dummy_no_hp_send_code"
                style="@style/PrimaryTextStyle.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_48"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/dummy_input_nohp_send_code"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dummy_otp_tv2" />

            <LinearLayout
                android:id="@+id/layout_no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dummy_no_hp_send_code">

                <TextView
                    android:id="@+id/dummy_no_send_code"
                    style="@style/PrimaryTextStyle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/placeholder_08_send_code"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/edt_number_phone"
                    style="@style/PrimaryTextStyle.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/hint_send_code"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:textSize="22sp" />
            </LinearLayout>

            <View
                android:id="@+id/lines_send_code"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@color/lines"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_no_hp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send_code"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_32"
                android:enabled="false"
                android:text="@string/send_code"
                app:cornerRadius="@dimen/dimen_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lines_send_code"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>